need to fix the overflow issue in the about

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -70,25 +70,22 @@ h2.sticky{
     top: 150px;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        filter: blur(15px);
+@media screen and (max-width: 768px){
+    .arz-about{
+        width: 80%;
     }
-    to {
-        opacity: 1;
-        filter: blur(0);
-    }
-}
 
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-        filter: blur(0);
+    h2{
+        font-size: 2rem;
     }
-    to {
-        opacity: 0;
-        filter: blur(15px);
+
+    h2.sticky{
+        top: 300px;
+    }
+
+    .arz-about-content p{
+        font-size: 1.2rem;
+        width: 80%;
     }
 }
 
@@ -113,3 +110,5 @@ h2.sticky{
         filter: blur(15px);
     }
 }
+
+
